Updated homepage to include a profile photo and enhanced publications section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 
     <section id="bio">
         <h2>Short Bio</h2>
-        <p>Xin Kang is an assistant professor specializing in Affective Computing, Natural Language Processing, Multi-Modal Machine Learning, AI Transparency, and Trustworthiness. His research explores applications in mental healthcare and financial argument analysis.</p>
+        <div class="profile-photo-container">
+            <img src="profile.jpeg" alt="Profile Photo of Xin Kang">
+        </div>
+        <p>Xin Kang is an associate professor specializing in Affective Computing, Natural Language Processing, Multi-Modal Machine Learning, AI Transparency, and Trustworthiness. His research explores applications in mental healthcare and financial argument analysis.</p>
     </section>
 
     <section id="interests">
