--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
     <section id="bio">
         <h2>Short Bio</h2>
-        <div class="profile-photo-container">
+        <div class="bio-container">
             <img src="profile.jpeg" alt="Profile Photo of Xin Kang">
+            <p>Xin Kang is an associate professor specializing in Affective Computing, Natural Language Processing, Multi-Modal Machine Learning, AI Transparency, and Trustworthiness. His research explores applications in mental healthcare and financial argument analysis.</p>
         </div>
-        <p>Xin Kang is an associate professor specializing in Affective Computing, Natural Language Processing, Multi-Modal Machine Learning, AI Transparency, and Trustworthiness. His research explores applications in mental healthcare and financial argument analysis.</p>
     </section>
 
     <section id="interests">
