--- a/index.html
+++ b/index.html
@@ -12,71 +12,89 @@
         <p>Associate Professor at Tokushima University, Faculty of Science and Engineering</p>
     </header>
 
-    <nav>
-        <ul>
-            <li><a href="#bio">Short Bio</a></li>
-            <li><a href="#interests">Research Interests</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#experience">Work Experiences</a></li>
-            <li><a href="#publications">Publications</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+    <div class="main-container">
+        <!-- Left Sidebar -->
+        <aside class="sidebar">
+            <div class="profile-photo-container">
+                <img src="profile.jpeg" alt="Profile Photo of Xin Kang">
+            </div>
+            <h2>Xin Kang</h2>
+            <p>Associate Professor</p>
+            <p>Tokushima University, Faculty of Science and Engineering</p>
+            <ul class="contact-info">
+                <li><strong>Location:</strong> Tokushima, Japan</li>
+                <li><strong>Email:</strong> <a href="mailto:xin.kang@tokushima-u.ac.jp">xin.kang@tokushima-u.ac.jp</a></li>
+                <li><strong>Google Scholar:</strong> <a href="#" target="_blank">View Profile</a></li>
+                <li><strong>ORCID:</strong> <a href="#" target="_blank">0000-0000-0000-0000</a></li>
+            </ul>
+        </aside>
 
-    <section id="bio">
-        <h2>Short Bio</h2>
-        <div class="bio-container">
-            <img src="profile.jpeg" alt="Profile Photo of Xin Kang">
-            <p>Xin Kang is an associate professor specializing in Affective Computing, Natural Language Processing, Multi-Modal Machine Learning, AI Transparency, and Trustworthiness. His research explores applications in mental healthcare and financial argument analysis.</p>
-        </div>
-    </section>
+        <!-- Main Content -->
+        <main class="content">
+            <nav>
+                <ul>
+                    <li><a href="#bio">Short Bio</a></li>
+                    <li><a href="#interests">Research Interests</a></li>
+                    <li><a href="#education">Education</a></li>
+                    <li><a href="#experience">Work Experiences</a></li>
+                    <li><a href="#publications">Publications</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
 
-    <section id="interests">
-        <h2>Research Interests</h2>
-        <ul>
-            <li>Affective Computing</li>
-            <li>Natural Language Processing (NLP)</li>
-            <li>Image Processing</li>
-            <li>Multi-Modal Machine Learning</li>
-            <li>Neuro-Symbolic AI</li>
-            <li>AI Transparency and Trustworthiness</li>
-            <li>Causal Machine Learning</li>
-            <li>Active Learning</li>
-            <li>AI for Mental Healthcare</li>
-            <li>AI for Financial Argument Analysis</li>
-        </ul>
-    </section>
+            <section id="bio">
+                <h2>Short Bio</h2>
+                <p>Xin Kang is an associate professor specializing in Affective Computing, Natural Language Processing, Multi-Modal Machine Learning, AI Transparency, and Trustworthiness. His research explores applications in mental healthcare and financial argument analysis.</p>
+            </section>
 
-    <section id="education">
-        <h2>Education</h2>
-        <ul>
-            <li>Doctorate in Engineering, Tokushima University</li>
-            <li>Bachelor's and Master's degrees in Computer Science, [Insert University Name]</li>
-        </ul>
-    </section>
+            <section id="interests">
+                <h2>Research Interests</h2>
+                <ul>
+                    <li>Affective Computing</li>
+                    <li>Natural Language Processing (NLP)</li>
+                    <li>Image Processing</li>
+                    <li>Multi-Modal Machine Learning</li>
+                    <li>Neuro-Symbolic AI</li>
+                    <li>AI Transparency and Trustworthiness</li>
+                    <li>Causal Machine Learning</li>
+                    <li>Active Learning</li>
+                    <li>AI for Mental Healthcare</li>
+                    <li>AI for Financial Argument Analysis</li>
+                </ul>
+            </section>
 
-    <section id="experience">
-        <h2>Work Experiences</h2>
-        <ul>
-            <li>Associate Professor, Tokushima University (Current)</li>
-            <li>Researcher in Early Depression Detection, Mental Health AI Lab</li>
-            <li>Developer of the AI software "Pulse.X" for medical data analysis</li>
-        </ul>
-    </section>
+            <section id="education">
+                <h2>Education</h2>
+                <ul>
+                    <li>Doctorate in Engineering, Tokushima University</li>
+                    <li>Bachelor's and Master's degrees in Computer Science, [Insert University Name]</li>
+                </ul>
+            </section>
 
-    <section id="publications">
-        <h2>Selected Publications</h2>
-        <ul>
-            <li><a href="#">Neuro-Conceptual AI: Enhancing Explainability and Knowledge Management</a></li>
-            <li><a href="#">Multi-Agent Collaboration for Transparent Sentiment Analysis</a></li>
-            <li><a href="#">Transforming PPG to ECG Signals Using Neural Networks</a></li>
-        </ul>
-    </section>
+            <section id="experience">
+                <h2>Work Experiences</h2>
+                <ul>
+                    <li>Associate Professor, Tokushima University (Current)</li>
+                    <li>Researcher in Early Depression Detection, Mental Health AI Lab</li>
+                    <li>Developer of the AI software "Pulse.X" for medical data analysis</li>
+                </ul>
+            </section>
 
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:xin.kang@tokushima-u.ac.jp">xin.kang@tokushima-u.ac.jp</a></p>
-    </section>
+            <section id="publications">
+                <h2>Selected Publications</h2>
+                <ul>
+                    <li><a href="#">Neuro-Conceptual AI: Enhancing Explainability and Knowledge Management</a></li>
+                    <li><a href="#">Multi-Agent Collaboration for Transparent Sentiment Analysis</a></li>
+                    <li><a href="#">Transforming PPG to ECG Signals Using Neural Networks</a></li>
+                </ul>
+            </section>
+
+            <section id="contact">
+                <h2>Contact</h2>
+                <p>Email: <a href="mailto:xin.kang@tokushima-u.ac.jp">xin.kang@tokushima-u.ac.jp</a></p>
+            </section>
+        </main>
+    </div>
 
     <footer>
         <p>&copy; 2025 Xin Kang. All rights reserved.</p>
