--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Xin Kang</h1>
-        <p>Associate Professor at Tokushima University, Faculty of Science and Engineering</p>
-    </header>
+    <!-- Sticky Navigation Bar -->
+    <nav class="sticky-nav">
+        <ul>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#publications">Publications</a></li>
+            <li><a href="#news">News</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
     <div class="main-container">
         <!-- Left Sidebar -->
@@ -31,53 +36,9 @@
 
         <!-- Main Content -->
         <main class="content">
-            <nav>
-                <ul>
-                    <li><a href="#bio">Short Bio</a></li>
-                    <li><a href="#interests">Research Interests</a></li>
-                    <li><a href="#education">Education</a></li>
-                    <li><a href="#experience">Work Experiences</a></li>
-                    <li><a href="#publications">Publications</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-
-            <section id="bio">
-                <h2>Short Bio</h2>
+            <section id="about">
+                <h2>About Me</h2>
                 <p>Xin Kang is an associate professor specializing in Affective Computing, Natural Language Processing, Multi-Modal Machine Learning, AI Transparency, and Trustworthiness. His research explores applications in mental healthcare and financial argument analysis.</p>
-            </section>
-
-            <section id="interests">
-                <h2>Research Interests</h2>
-                <ul>
-                    <li>Affective Computing</li>
-                    <li>Natural Language Processing (NLP)</li>
-                    <li>Image Processing</li>
-                    <li>Multi-Modal Machine Learning</li>
-                    <li>Neuro-Symbolic AI</li>
-                    <li>AI Transparency and Trustworthiness</li>
-                    <li>Causal Machine Learning</li>
-                    <li>Active Learning</li>
-                    <li>AI for Mental Healthcare</li>
-                    <li>AI for Financial Argument Analysis</li>
-                </ul>
-            </section>
-
-            <section id="education">
-                <h2>Education</h2>
-                <ul>
-                    <li>Doctorate in Engineering, Tokushima University</li>
-                    <li>Bachelor's and Master's degrees in Computer Science, [Insert University Name]</li>
-                </ul>
-            </section>
-
-            <section id="experience">
-                <h2>Work Experiences</h2>
-                <ul>
-                    <li>Associate Professor, Tokushima University (Current)</li>
-                    <li>Researcher in Early Depression Detection, Mental Health AI Lab</li>
-                    <li>Developer of the AI software "Pulse.X" for medical data analysis</li>
-                </ul>
             </section>
 
             <section id="publications">
@@ -86,6 +47,14 @@
                     <li><a href="#">Neuro-Conceptual AI: Enhancing Explainability and Knowledge Management</a></li>
                     <li><a href="#">Multi-Agent Collaboration for Transparent Sentiment Analysis</a></li>
                     <li><a href="#">Transforming PPG to ECG Signals Using Neural Networks</a></li>
+                </ul>
+            </section>
+
+            <section id="news">
+                <h2>News</h2>
+                <ul>
+                    <li><strong>2025-01-01:</strong> Published a new paper on Neuro-Symbolic AI.</li>
+                    <li><strong>2024-12-15:</strong> Presented at the International AI Conference.</li>
                 </ul>
             </section>
 
@@ -101,3 +70,4 @@
     </footer>
 </body>
 </html>
+
