--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
             <p>Associate Professor</p>
             <p>Tokushima University, Faculty of Science and Engineering</p>
             <ul class="contact-info">
-                <li><strong>Location:</strong> Tokushima, Japan</li>
-                <li><strong>Email:</strong> <a href="mailto:xin.kang@tokushima-u.ac.jp">xin.kang@tokushima-u.ac.jp</a></li>
-                <li><strong>Google Scholar:</strong> <a href="#" target="_blank">View Profile</a></li>
-                <li><strong>ORCID:</strong> <a href="#" target="_blank">0000-0000-0000-0000</a></li>
+                <li><a href="#" target="_blank">Google Scholar</a></li>
+                <li><a href="#" target="_blank">ORCID</a></li>
             </ul>
         </aside>
 
@@ -60,7 +58,7 @@
 
             <section id="contact">
                 <h2>Contact</h2>
-                <p>Email: <a href="mailto:xin.kang@tokushima-u.ac.jp">xin.kang@tokushima-u.ac.jp</a></p>
+                <p>You can reach me through the provided links above.</p>
             </section>
         </main>
     </div>
