--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Xin Kang's Homepage</title>
+    <title>Xin Kang's Academic Homepage</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,8 +11,11 @@
     <nav class="sticky-nav">
         <ul>
             <li><a href="#about">About Me</a></li>
-            <li><a href="#publications">Publications</a></li>
+            <li><a href="#interests">Research Interests</a></li>
             <li><a href="#news">News</a></li>
+            <li><a href="#publications">Publications</a></li>
+            <li><a href="#teaching">Teaching</a></li>
+            <li><a href="#services">Services</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -39,6 +42,26 @@
                 <p>Xin Kang is an associate professor specializing in Affective Computing, Natural Language Processing, Multi-Modal Machine Learning, AI Transparency, and Trustworthiness. His research explores applications in mental healthcare and financial argument analysis.</p>
             </section>
 
+            <section id="interests">
+                <h2>Research Interests</h2>
+                <ul>
+                    <li>Affective Computing</li>
+                    <li>Natural Language Processing (NLP)</li>
+                    <li>Image Processing</li>
+                    <li>Multi-Modal Machine Learning</li>
+                    <li>Neuro-Symbolic AI</li>
+                    <li>AI Transparency and Trustworthiness</li>
+                </ul>
+            </section>
+
+            <section id="news">
+                <h2>News</h2>
+                <ul>
+                    <li><strong>2025-01-01:</strong> Published a new paper on Neuro-Symbolic AI.</li>
+                    <li><strong>2024-12-15:</strong> Presented at the International AI Conference.</li>
+                </ul>
+            </section>
+
             <section id="publications">
                 <h2>Selected Publications</h2>
                 <ul>
@@ -48,11 +71,38 @@
                 </ul>
             </section>
 
-            <section id="news">
-                <h2>News</h2>
+            <section id="teaching">
+                <h2>Teaching</h2>
                 <ul>
-                    <li><strong>2025-01-01:</strong> Published a new paper on Neuro-Symbolic AI.</li>
-                    <li><strong>2024-12-15:</strong> Presented at the International AI Conference.</li>
+                    <li>Advanced Machine Learning – Graduate Course, Fall 2024</li>
+                    <li>Technical Writing for Computer Science – Undergraduate Course</li>
+                </ul>
+            </section>
+
+            <section id="services">
+                <h2>Professional Services</h2>
+                <h3>Memberships</h3>
+                <ul>
+                    <li>Member, IEEE</li>
+                    <li>Member, ACM</li>
+                    <li>Member, CAAI</li>
+                </ul>
+
+                <h3>Editorship</h3>
+                <ul>
+                    <li>Associate Editor, Journal of Affective Computing</li>
+                </ul>
+
+                <h3>Professional Services</h3>
+                <ul>
+                    <li>Program Committee Member, International AI Conference</li>
+                    <li>Reviewer, Journal of Machine Learning Research</li>
+                </ul>
+
+                <h3>Reviewing</h3>
+                <ul>
+                    <li>Reviewer, AAAI</li>
+                    <li>Reviewer, ACL</li>
                 </ul>
             </section>
 
