--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p>Associate Professor</p>
             <p>Tokushima University, Faculty of Science and Engineering</p>
             <ul class="contact-info">
-                <li><a href="#" target="_blank">Google Scholar</a></li>
+                <li><a href="#" target="_blank">Google Scholar</a>https://scholar.google.com/citations?hl=en&user=dL9WAnsAAAAJ</li>
                 <li><a href="#" target="_blank">ORCID</a></li>
             </ul>
         </aside>
