--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <h2>Xin Kang</h2>
             <p>Associate Professor</p>
-            <p>Tokushima University, Faculty of Science and Engineering</p>
+            <p>Tokushima University, Graduate School of Advanced Technology and Science</p>
             <ul class="contact-info">
                 <li><a href="https://scholar.google.com/citations?hl=en&user=dL9WAnsAAAAJ" target="_blank">Google Scholar</a></li>
                 <li><a href="https://orcid.org/0000-0001-6024-3598" target="_blank">ORCID</a></li>
@@ -39,43 +39,43 @@
         <main class="content">
             <section id="about">
                 <h2>About Me</h2>
-                <p>Xin Kang is an associate professor specializing in Affective Computing, Natural Language Processing, Multi-Modal Machine Learning, AI Transparency, and Trustworthiness. His research explores applications in mental healthcare and financial argument analysis.</p>
+                <p>Xin Kang is an Associate Professor of Information Science and Intelligent Systems at the Graduate School of Advanced Technology and Science, Tokushima University, Japan. He received his PhD in Systems Innovation Engineering from Tokushima University in 2013. His research interests include Affective Computing, Neuro-Symbolic AI, Multimodal Machine Learning, and Knowledge Engineering. He has published over 100 papers in peer-reviewed journals and conferences. Dr. Kang serves on the editorial board of the Cognitive Robotics journal and is a member of IEEE, ACM, ACL, and CAAI.</p>
             </section>
 
             <section id="interests">
                 <h2>Research Interests</h2>
                 <ul>
-                    <li>Affective Computing</li>
-                    <li>Natural Language Processing (NLP)</li>
-                    <li>Image Processing</li>
-                    <li>Multi-Modal Machine Learning</li>
-                    <li>Neuro-Symbolic AI</li>
-                    <li>AI Transparency and Trustworthiness</li>
+                    <li><strong>Affective Computing:</strong> Complex Emotion Recognition, Depression Detection, Aspect-Based Sentiment Analysis</li>
+                    <li><strong>Neuro-Symbolic AI:</strong> Transparent AI, Agentic AI, Fuzzy Logic</li>
+                    <li><strong>Multimodal Machine Learning:</strong> Video-Speech-Text Alignment, Large Multimodal Models</li>
+                    <li><strong>Knowledge Engineering:</strong> Semantic Information Extraction, Conceptual Modeling, Object-Process Methodology</li>
                 </ul>
             </section>
 
             <section id="news">
                 <h2>News</h2>
                 <ul>
-                    <li><strong>2025-01-01:</strong> Published a new paper on Neuro-Symbolic AI.</li>
-                    <li><strong>2024-12-15:</strong> Presented at the International AI Conference.</li>
+                    <li><strong>2024:</strong> Received a grant for Digitalization of Mental Health Diagnosis (15 Million Yen)</li>
+                    <li><strong>2025:</strong> Published a new paper in IEEE Transactions on Affective Computing</li>
                 </ul>
             </section>
 
             <section id="publications">
                 <h2>Selected Publications</h2>
                 <ul>
-                    <li><a href="#">Neuro-Conceptual AI: Enhancing Explainability and Knowledge Management</a></li>
-                    <li><a href="#">Multi-Agent Collaboration for Transparent Sentiment Analysis</a></li>
-                    <li><a href="#">Transforming PPG to ECG Signals Using Neural Networks</a></li>
+                    <li><a href="#">Neuro-Conceptual AI: Enhancing Explainability and Knowledge Management</a> - IEEE Transactions on Affective Computing</li>
+                    <li><a href="#">Multi-Agent Collaboration for Transparent Sentiment Analysis</a> - ACL Annual Meeting</li>
+                    <li><a href="#">Transforming PPG to ECG Signals Using Neural Networks</a> - Neurocomputing</li>
                 </ul>
             </section>
 
             <section id="teaching">
                 <h2>Teaching</h2>
                 <ul>
-                    <li>Advanced Machine Learning – Graduate Course, Fall 2024</li>
-                    <li>Technical Writing for Computer Science – Undergraduate Course</li>
+                    <li>Advanced Machine Translation – Graduate Course</li>
+                    <li>Data Science – Graduate Course</li>
+                    <li>Software Design and Experiment – Undergraduate Course</li>
+                    <li>Introduction to Intelligent Information – Undergraduate Course</li>
                 </ul>
             </section>
 
@@ -90,19 +90,14 @@
 
                 <h3>Editorship</h3>
                 <ul>
-                    <li>Associate Editor, Journal of Affective Computing</li>
+                    <li>Associate Editor, Cognitive Robotics</li>
                 </ul>
 
-                <h3>Professional Services</h3>
+                <h3>Reviewer</h3>
                 <ul>
-                    <li>Program Committee Member, International AI Conference</li>
-                    <li>Reviewer, Journal of Machine Learning Research</li>
-                </ul>
-
-                <h3>Reviewing</h3>
-                <ul>
-                    <li>Reviewer, AAAI</li>
-                    <li>Reviewer, ACL</li>
+                    <li>IEEE Transactions on Affective Computing</li>
+                    <li>Neurocomputing</li>
+                    <li>IEEE Internet of Things Journal</li>
                 </ul>
             </section>
 
