--- a/index.html
+++ b/index.html
@@ -71,11 +71,23 @@
 
             <section id="teaching">
                 <h2>Teaching</h2>
+                <h3>Undergraduate Courses</h3>
                 <ul>
-                    <li>Advanced Machine Translation – Graduate Course</li>
-                    <li>Data Science – Graduate Course</li>
-                    <li>Software Design and Experiment – Undergraduate Course</li>
-                    <li>Introduction to Intelligent Information – Undergraduate Course</li>
+                    <li>Software Design and Experiment</li>
+                    <li>STEM Practice</li>
+                    <li>Introduction to Science and Technology</li>
+                    <li>Introduction to Intelligent Information</li>
+                    <li>Technical English Fundamentals (2)</li>
+                    <li>Information Technology and the Workplace</li>
+                    <li>SIH (Strike while the Iron is Hot) Training</li>
+                </ul>
+
+                <h3>Graduate Courses</h3>
+                <ul>
+                    <li>Data Science</li>
+                    <li>Graduate Seminar on Computer Science</li>
+                    <li>Research Approaches in Science and Technology (E)</li>
+                    <li>Advanced Machine Translation</li>
                 </ul>
             </section>
 
@@ -113,4 +125,3 @@
     </footer>
 </body>
 </html>
-
