--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <h2>Xin Kang</h2>
             <p>Associate Professor</p>
-            <p>Tokushima University, Graduate School of Sciences and Technology for Innovation</p>
+            <p>Computer Science, Faculty of Science and Technology, Tokushima University</p>
             <ul class="contact-info">
                 <li>Email: <a href="mailto:kang-xin@tokushima-u.ac.jp">kang-xin@tokushima-u.ac.jp</a></li>
                 <li><a href="https://scholar.google.com/citations?hl=en&user=dL9WAnsAAAAJ" target="_blank">Google Scholar</a></li>
@@ -40,7 +40,7 @@
         <main class="content">
             <section id="about">
                 <h2>About Me</h2>
-                <p>Xin Kang is an Associate Professor of Information Science and Intelligent Systems at the Graduate School of Sciences and Technology for Innovation, Tokushima University, Japan. He received his PhD in Systems Innovation Engineering from Tokushima University in 2013. His research interests include Affective Computing, Neuro-Symbolic AI, Multimodal Machine Learning, and Knowledge Engineering. He has published over 100 papers in peer-reviewed journals and conferences. Dr. Kang serves on the editorial board of the Cognitive Robotics journal and is a member of IEEE, ACM, ACL, and CAAI.</p>
+                <p>Xin Kang is an Associate Professor of Computer Science in the Faculty of Science and Technology, Tokushima University, Japan. He received his PhD in Systems Innovation Engineering from Tokushima University in 2013. His research interests include Affective Computing, Neuro-Symbolic AI, Multimodal Machine Learning, and Knowledge Engineering. He has published over 100 papers in peer-reviewed journals and conferences. Dr. Kang serves on the editorial board of the Cognitive Robotics journal and is a member of IEEE, ACM, ACL, and CAAI.</p>
             </section>
 
             <section id="interests">
