--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             </div>
             <h2>Xin Kang</h2>
             <p>Associate Professor</p>
-            <p>Computer Science, Faculty of Science and Technology, Tokushima University</p>
+            <p>Faculty of Science and Technology, Tokushima University</p>
             <ul class="contact-info">
-                <li>Email: <a href="mailto:kang-xin@tokushima-u.ac.jp">kang-xin@tokushima-u.ac.jp</a></li>
+                <li><a href="mailto:kang-xin@tokushima-u.ac.jp">Email</a></li>
                 <li><a href="https://scholar.google.com/citations?hl=en&user=dL9WAnsAAAAJ" target="_blank">Google Scholar</a></li>
                 <li><a href="https://orcid.org/0000-0001-6024-3598" target="_blank">ORCID</a></li>
             </ul>
