--- a/index.html
+++ b/index.html
@@ -28,11 +28,25 @@
             </div>
             <h2>Xin Kang</h2>
             <p>Associate Professor</p>
-            <p>Faculty of Science and Technology, Tokushima University</p>
+            <p>Computer Science, Faculty of Science and Technology, Tokushima University</p>
+            <p><strong>Location:</strong> Tokushima, Japan</p>
             <ul class="contact-info">
-                <li><a href="mailto:kang-xin@tokushima-u.ac.jp">Email</a></li>
-                <li><a href="https://scholar.google.com/citations?hl=en&user=dL9WAnsAAAAJ" target="_blank">Google Scholar</a></li>
-                <li><a href="https://orcid.org/0000-0001-6024-3598" target="_blank">ORCID</a></li>
+                <li>
+                    <img src="icons/email.svg" alt="Email Icon" class="icon">
+                    Email: <a href="mailto:kang-xin@tokushima-u.ac.jp">kang-xin@tokushima-u.ac.jp</a>
+                </li>
+                <li>
+                    <img src="icons/google-scholar.svg" alt="Google Scholar Icon" class="icon">
+                    <a href="https://scholar.google.com/citations?hl=en&user=dL9WAnsAAAAJ" target="_blank">Google Scholar</a>
+                </li>
+                <li>
+                    <img src="icons/orcid.svg" alt="ORCID Icon" class="icon">
+                    <a href="https://orcid.org/0000-0001-6024-3598" target="_blank">ORCID</a>
+                </li>
+                <li>
+                    <img src="icons/location.svg" alt="Location Icon" class="icon">
+                    Tokushima, Japan
+                </li>
             </ul>
         </aside>
 
