--- a/index.html
+++ b/index.html
@@ -29,23 +29,24 @@
             <h2>Xin Kang</h2>
             <p>Associate Professor</p>
             <p>Computer Science, Faculty of Science and Technology, Tokushima University</p>
-            <p><strong>Location:</strong> Tokushima, Japan</p>
             <ul class="contact-info">
                 <li>
-                    <img src="icons/email.svg" alt="Email Icon" class="icon">
-                    Email: <a href="mailto:kang-xin@tokushima-u.ac.jp">kang-xin@tokushima-u.ac.jp</a>
+                    <a href="mailto:kang-xin@tokushima-u.ac.jp">
+                        <img src="icons/email.svg" alt="Email Icon" class="icon"> Email
+                    </a>
                 </li>
                 <li>
-                    <img src="icons/google-scholar.svg" alt="Google Scholar Icon" class="icon">
-                    <a href="https://scholar.google.com/citations?hl=en&user=dL9WAnsAAAAJ" target="_blank">Google Scholar</a>
+                    <a href="https://scholar.google.com/citations?hl=en&user=dL9WAnsAAAAJ" target="_blank">
+                        <img src="icons/google-scholar.svg" alt="Google Scholar Icon" class="icon"> Google Scholar
+                    </a>
                 </li>
                 <li>
-                    <img src="icons/orcid.svg" alt="ORCID Icon" class="icon">
-                    <a href="https://orcid.org/0000-0001-6024-3598" target="_blank">ORCID</a>
+                    <a href="https://orcid.org/0000-0001-6024-3598" target="_blank">
+                        <img src="icons/orcid.svg" alt="ORCID Icon" class="icon"> ORCID
+                    </a>
                 </li>
                 <li>
-                    <img src="icons/location.svg" alt="Location Icon" class="icon">
-                    Tokushima, Japan
+                    <img src="icons/location.svg" alt="Location Icon" class="icon"> Tokushima, Japan
                 </li>
             </ul>
         </aside>
@@ -67,6 +68,7 @@
                 </ul>
             </section>
 
+            <!-- Other Sections -->
             <section id="news">
                 <h2>News</h2>
                 <ul>
