--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Xin Kang's Academic Homepage</title>
+    <title>Dr. Xin Kang's Academic Homepage</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,6 @@
         <ul>
             <li><a href="#about">About Me</a></li>
             <li><a href="#interests">Research Interests</a></li>
-            <li><a href="#news">News</a></li>
             <li><a href="#publications">Publications</a></li>
             <li><a href="#teaching">Teaching</a></li>
             <li><a href="#services">Services</a></li>
@@ -24,15 +23,12 @@
         <!-- Left Sidebar -->
         <aside class="sidebar">
             <div class="profile-photo-container">
-                <img src="profile.jpeg" alt="Profile Photo of Xin Kang">
+                <img src="profile.jpeg" alt="Profile Photo of Dr. Xin Kang">
             </div>
-            <h2>Xin Kang</h2>
+            <h2>Dr. Xin Kang</h2>
             <p>Associate Professor</p>
             <p>Computer Science, Faculty of Science and Technology, Tokushima University</p>
             <ul class="contact-info">
-                <li>
-                    <img src="icons/location.svg" alt="Location Icon" class="icon"> Tokushima, Japan
-                </li>
                 <li>
                     <a href="mailto:kang-xin@tokushima-u.ac.jp">
                         <img src="icons/email.svg" alt="Email Icon" class="icon"> Email
@@ -55,7 +51,7 @@
         <main class="content">
             <section id="about">
                 <h2>About Me</h2>
-                <p>Xin Kang is an Associate Professor of Computer Science in the Faculty of Science and Technology, Tokushima University, Japan. He received his PhD in Systems Innovation Engineering from Tokushima University in 2013. His research interests include Affective Computing, Neuro-Symbolic AI, Multimodal Machine Learning, and Knowledge Engineering. He has published over 100 papers in peer-reviewed journals and conferences. Dr. Kang serves on the editorial board of the Cognitive Robotics journal and is a member of IEEE, ACM, ACL, and CAAI.</p>
+                <p>Dr. Xin Kang is an Associate Professor of Computer Science in the Faculty of Science and Technology, Tokushima University, Japan. He received his PhD in Systems Innovation Engineering from Tokushima University in 2013. His research interests include Affective Computing, Neuro-Symbolic AI, Multimodal Machine Learning, and Knowledge Engineering. He has published over 100 papers in peer-reviewed journals and conferences. Dr. Kang serves on the editorial board of the Cognitive Robotics journal and is a member of IEEE, ACM, ACL, and CAAI.</p>
             </section>
 
             <section id="interests">
@@ -68,21 +64,69 @@
                 </ul>
             </section>
 
-            <!-- Other Sections -->
-            <section id="news">
-                <h2>News</h2>
-                <ul>
-                    <li><strong>2024:</strong> Received a grant for Digitalization of Mental Health Diagnosis (15 Million Yen)</li>
-                    <li><strong>2025:</strong> Published a new paper in IEEE Transactions on Affective Computing</li>
-                </ul>
-            </section>
-
             <section id="publications">
                 <h2>Selected Publications</h2>
+                <h3>Journal Papers</h3>
                 <ul>
-                    <li><a href="#">Neuro-Conceptual AI: Enhancing Explainability and Knowledge Management</a> - IEEE Transactions on Affective Computing</li>
-                    <li><a href="#">Multi-Agent Collaboration for Transparent Sentiment Analysis</a> - ACL Annual Meeting</li>
-                    <li><a href="#">Transforming PPG to ECG Signals Using Neural Networks</a> - Neurocomputing</li>
+                    <li>
+                        Xuefeng Shi*, Ming Yang, Min Hu, Fuji Ren, <strong>Xin Kang</strong>, and Weiping Ding, 
+                        "Affective knowledge assisted bi-directional learning for Multi-modal Aspect-based Sentiment Analysis," 
+                        <em>Computer Speech & Language</em>, vol. 91, Art. no. 101755, 2025. 
+                        DOI: <a href="https://doi.org/10.1016/j.csl.2024.101755" target="_blank">10.1016/j.csl.2024.101755</a>.
+                    </li>
+
+                    <li>
+                        Linhuang Wang, <strong>Xin Kang*</strong>, Fei Ding, Satoshi Nakagawa, and Fuji Ren, 
+                        "A joint local spatial and global temporal CNN-Transformer for dynamic facial expression recognition," 
+                        <em>Applied Soft Computing</em>, vol. 161, Art. no. 111680, 2024. 
+                        DOI: <a href="https://doi.org/10.1016/j.asoc.2024.111680" target="_blank">10.1016/j.asoc.2024.111680</a>.
+                    </li>
+
+                    <li>
+                        Fei Ding, <strong>Xin Kang*</strong>, Linhuang Wang, Yunong Wu, Satoshi Nakagawa, and Fuji Ren, 
+                        "Causal inference and prefix prompt engineering based on text generation models for financial argument analysis," 
+                        <em>Electronics</em>, vol. 13, no. 9, Art. no. 1746, 2024. 
+                        DOI: <a href="https://doi.org/10.3390/electronics13091746" target="_blank">10.3390/electronics13091746</a>.
+                    </li>
+
+                    <li>
+                        Fei Ding, <strong>Xin Kang*</strong>, and Fuji Ren, 
+                        "Neuro or symbolic? Fine-tuned transformer with unsupervised LDA topic clustering for text sentiment analysis," 
+                        <em>IEEE Transactions on Affective Computing</em>, vol. 15, no. 2, pp. 493-507, 2024. 
+                        DOI: <a href="https://doi.org/10.1109/TAFFC.2023.3279318" target="_blank">10.1109/TAFFC.2023.3279318</a>.
+                    </li>
+
+                    <li>
+                        Fu-Ji Ren, Yang-Yang Zhou, Jia-Wen Deng, Kazuyuki Matsumoto, Duo Feng, Tian-Hao She, 
+                        Zi-Yun Jiao, Zheng Liu, Tai-Hao Li, Satoshi Nakagawa, and <strong>Xin Kang*</strong>, 
+                        "Tracking emotions using an evolutionary model of mental state transitions: Introducing a new paradigm," 
+                        <em>Intelligent Computing</em>, vol. 3, Art. no. 0075, 2024. 
+                        DOI: <a href="https://doi.org/10.34133/icomputing.0075" target="_blank">10.34133/icomputing.0075</a>.
+                    </li>
+
+                    <li>
+                        Rongyu Dou and <strong>Xin Kang*</strong>, 
+                        "TAM-SenticNet: A Neuro-Symbolic AI approach for early depression detection via social media analysis," 
+                        <em>Computers and Electrical Engineering</em>, vol. 114, Art. no. 109071, 2024. 
+                        DOI: <a href="https://doi.org/10.1016/j.compeleceng.2023.109071" target="_blank">10.1016/j.compeleceng.2023.109071</a>.
+                    </li>
+
+                    <li>
+                        Yuxiang Zhou, <strong>Xin Kang*</strong>, Fuji Ren, Huimin Lu, Satoshi Nakagawa, and Xiao Shan, 
+                        "A multi-attention and depthwise separable convolution network for medical image segmentation," 
+                        <em>Neurocomputing</em>, vol. 564, Art. no. 126970, 2024. 
+                        DOI: <a href="https://doi.org/10.1016/j.neucom.2023.126970" target="_blank">10.1016/j.neucom.2023.126970</a>.
+                    </li>
+                </ul>
+
+                <h3>Conference Papers</h3>
+                <ul>
+                </ul>
+
+                <h3>Books</h3>
+                <ul>
+                    <li><a href="#">A Gentle Introduction to Deep Learning</a> - Sotechsha Co., Ltd., 2018</li>
+                    <li><a href="#">Artificial Intelligence with Uncertainty</a> - NTS Co., Ltd., 2017</li>
                 </ul>
             </section>
 
@@ -138,7 +182,8 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Xin Kang. All rights reserved.</p>
+        <p>&copy; 2025 Dr. Xin Kang. All rights reserved.</p>
     </footer>
 </body>
 </html>
+
